[package]
name = "clahe-rs"
version = "0.1.0"
authors = ["Shane Snover <ssnover95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.4"
imageproc = { version = "0.25.0", features = ["display-window"] }